http-connection-manager/fault-injection/front-envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: http_listener
    address: 
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: test_route
            virtual_hosts:
            - name: webcluster
              domains: ["*"]
              routes:
              - match: 
                  prefix: "/service/blue"
                route: {cluster: blue_abort}
              - match: {prefix: "/service/red"}
                route: {cluster: red_delay}
              - match: {prefix: "/service/green"}
                route: {cluster: green}
          http_filters:
          - name: envoy.router
  clusters:
  - name: blue_abort
    type: STRICT_DNS
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: blue_abort
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: 
                address: service_blue
                port_value: 80
  - name: red_delay
    type: STRICT_DNS
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: red_delay
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: 
                address: service_red
                port_value: 80
  - name: green
    type: STRICT_DNS
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: green
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: 
                address: service_green
                port_value: 80
